Bug 376350 - Screenshots of single window can be sized wrongly
Summary: Screenshots of single window can be sized wrongly
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-11 13:21 UTC by Jonathan Riddell
Modified: 2018-02-21 04:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kfloppy from spectacle (42.42 KB, image/png)
2017-02-11 13:21 UTC, Jonathan Riddell
Details
Mixxx Preferences window (127.46 KB, image/png)
2017-11-16 03:48 UTC, Be
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2017-02-11 13:21:09 UTC
Created attachment 103978 [details]
kfloppy from spectacle

I took a screenshot of essential KDE application KFloppy which has a small window.  Boud was standing behind me and jinxed it and the screenshot was much larger than the window with transparent fill.
Comment 1 Jonathan Riddell 2017-02-11 13:22:44 UTC
This happens with any QDialog main window app such as Spectacle itself. It doesn't happen with a resized Konsole for example.
Comment 2 Be 2017-11-16 03:48:28 UTC
Created attachment 108890 [details]
Mixxx Preferences window

another screenshot of the bug
Comment 3 Nate Graham 2018-02-21 04:54:16 UTC
Git commit db2231ae618add67c26bc88c2e327d3512993245 by Nathaniel Graham, on behalf of Alex Nemeth.
Committed on 21/02/2018 at 04:53.
Pushed by ngraham into branch 'master'.

Fix capturing QDialog that included the whole desktop area

Summary:
QDialog may add a 1x1 sized desktop window in the top left corner when capturing with Window Under Cursor.
Now it ignores that.

Test Plan:
Before:
{F5719291}

After:
{F5719290}

Reviewers: #spectacle, rkflx, ngraham

Reviewed By: #spectacle, rkflx, ngraham

Subscribers: ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D10673

M  +8    -1    src/PlatformBackends/X11ImageGrabber.cpp

https://commits.kde.org/spectacle/db2231ae618add67c26bc88c2e327d3512993245