Fix capturing QDialog that included the whole desktop area

Summary:
QDialog may add a 1x1 sized desktop window in the top left corner when capturing with Window Under Cursor.
Now it ignores that.

BUG: 376350

Test Plan:
Before:
{F5719291}

After:
{F5719290}

Reviewers: #spectacle, rkflx, ngraham

Reviewed By: #spectacle, rkflx, ngraham

Subscribers: ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D10673